[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/UI/Elements/DeleteButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/world/character.svg" type="Texture" id=4]
[ext_resource path="res://assets/theme/gdquest.theme" type="Theme" id=5]
[ext_resource path="res://src/UI/Menus/Characters/CharacterListing.gd" type="Script" id=6]
[ext_resource path="res://assets/theme/stylebox/button_disabled.tres" type="StyleBox" id=7]

[node name="CharacterListing" type="Button"]
margin_right = 120.0
margin_bottom = 80.0
rect_min_size = Vector2( 480, 80 )
focus_neighbour_right = NodePath("HBoxContainer/DeleteButton")
mouse_filter = 1
size_flags_horizontal = 4
theme = ExtResource( 5 )
custom_styles/normal = ExtResource( 7 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="HBoxContainer"]
margin_left = 132.0
margin_right = 192.0
margin_bottom = 80.0
rect_min_size = Vector2( 60, 60 )
texture = ExtResource( 4 )
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="HBoxContainer"]
margin_left = 208.0
margin_top = 24.0
margin_right = 281.0
margin_bottom = 55.0
text = "Name"

[node name="DeleteButton" parent="HBoxContainer" instance=ExtResource( 1 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 297.0
margin_top = 0.0
margin_right = 347.0
margin_bottom = 80.0
focus_neighbour_left = NodePath("../..")
[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="pressed" from="HBoxContainer/DeleteButton" to="." method="_on_DeleteButton_pressed"]
